--- a/src/views/partial/episode/_detail.njk
+++ b/src/views/partial/episode/_detail.njk
@@ -1,10 +1,10 @@
 <div class="playable episode carousel-item active" data-bs-interval="4000" data-url="https://www.mixcloud.com/widget/iframe/?hide_cover=1&autoplay=1&feed={{ data.episode.key }}">
   <div class="d-md-flex">
 
-    <div class="image-container me-3 mb-3" data-action="click->radio#play">
+    <div class="episode__header me-3 mb-3" data-action="click->radio#play">
       <img src="{{ data.episode.pictures.large }}" class="img-fluid" alt="{{ data.episode.name }}"/>
 
-      <div class="playable-button">
+      <div class="playable__button">
         <span class="button">
           <button></button>
         </span>
@@ -16,14 +16,14 @@
         </div>
 
         {% if data.episode.favorite_count > 0 and data.episode.user.username === 'patternradio' %}
-          <div class="likes count">
+          <div class="statistics__likes statistics__count">
             <span>{{data.episode.favorite_count}}</span>
           </div>
         {% endif %}
 
         {% if data.episode.repost_count > 0 and data.episode.user.username === 'patternradio' %}
-          <div class="reposts count ms-2">
-            <span>{{data.episode.repost_count}}</span>
+          <div class="statistics__reposts statistics__count ms-2">
+            <span">{{data.episode.repost_count}}</span>
           </div>
         {% endif %}
       </div>
