--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,25 +1,7 @@
 @import './branding';
-
-$font-family-base: $brand-font-secondary;
-$grid-gutter-width: 1rem;
-$headings-font-family: $brand-font-primary;
-$font-size-base: 1rem;
-$lead-font-size: $font-size-base * 3;
-$badge-color: $brand-color-dark;
-$card-bg: transparent;
-$card-border-color: none;
-$card-border-radius: 0;
-$grid-gutter-width: 4rem;
-$headings-color: $brand-color-dark;
-$navbar-dark-color: $brand-color-light;
-$nav-link-color: $brand-color-light;
-$navbar-dark-active-color: $brand-color-primary;
-$transition-collapse: height .1s ease;
-$carousel-control-color: $brand-color-dark;
-$carousel-indicator-active-bg: $brand-color-dark;
-$list-group-item-padding-x: 0.6rem;
-
+@import './bootstrap';
 @import '../../node_modules/bootstrap/scss/bootstrap';
+
 @import './episode';
 @import './filters';
 @import './list';
@@ -51,16 +33,6 @@ h3 {
   span {
     @include font-size(1.4rem);
   }
-}
-
-hr {
-  margin: 0 0 2rem;
-}
-
-.lead {
-  font-family: $brand-font-primary, sans-serif;
-  color: $brand-color-secondary;
-  font-size: 2.8rem;
 }
 
 .main-header {
@@ -121,7 +93,7 @@ hr {
   .row {
     padding-top: 1.4rem;
 
-    &__orange {
+    &--orange {
       background: url('/images/brand/patterns_01_tile.png') repeat;
 
       h1 {
@@ -133,10 +105,9 @@ hr {
         @include font-size(2rem);
       }
 
-      .content {
+      .content-area {
         background-color: $brand-color-white;
         padding: 1rem;
-        padding:20px;
       }
     }
   }
