--- a/src/views/page/home.njk
+++ b/src/views/page/home.njk
@@ -100,7 +100,7 @@
 
           <p class="mb-0">Click show to load in player</p>
           <div class="row episodes gx-3 gx-sm-4" data-episodes-target="items"></div>
-          <a data-controller="navigation" data-action="click->navigation#navigate" class="nav-link" href="/browse">Browse all shows</a>
+          <a data-action="click->navigation#navigate" class="nav-link" href="/browse">Browse all shows</a>
         </div>
       </div>
     </div>
