--- a/src/views/page/show.njk
+++ b/src/views/page/show.njk
@@ -25,7 +25,7 @@
         {% include "partial/list/_pagination.njk" %}
 
         <div class="row episodes gx-2 gx-sm-4 " data-episodes-target="items"></div>
-        <a class="nav-link" href="/shows" data-controller="navigation" data-action="click->navigation#navigate">Back to all shows</a>
+        <a class="nav-link" href="/shows" data-action="click->navigation#navigate">Back to all shows</a>
       </div>
     </div>
 
