--- a/src/views/partial/episode/_carousel.njk
+++ b/src/views/partial/episode/_carousel.njk
@@ -25,7 +25,7 @@
       {% if item.user.username === 'patternradio' %}
 
         <h5 class="card-title">
-          <a data-controller="navigation" data-action="click->navigation#navigate" href="/episode/{{ item.slug }}" class="nav-link mb-1 fs-3">{{ showData(item.name).detail }}</a>
+          <a data-action="click->navigation#navigate" href="/episode/{{ item.slug }}" class="nav-link mb-1 fs-3">{{ showData(item.name).detail }}</a>
         </h5>
 
         <h5 class="card-title mb-2">
@@ -33,7 +33,7 @@
         </h5>
 
         <p class="card-text mb-1">
-          <a data-controller="navigation" data-action="click->navigation#navigate" href="/show/{{ showTitleId(title | trim) }}" class="nav-link fs-6">{{ showData(item.name).title }}</a>
+          <a data-action="click->navigation#navigate" href="/show/{{ showTitleId(title | trim) }}" class="nav-link fs-6">{{ showData(item.name).title }}</a>
         </p>
 
       {% else %}
