--- a/src/views/page/home.njk
+++ b/src/views/page/home.njk
@@ -70,13 +70,13 @@
         <div class="row g-0 p-0">
           <h3>Coming Soon</h3>
           <div class="col-12 col-sm-5 content-area pb-2">
-            <img src="images/shows/tropicaldisco.png" class="w-100" alt="Tropical Disco Goes Gospel"/>
+            <img src="images/shows/circuit-board.jpeg" class="w-100" alt="Techno Saturday on Pattern Radio"/>
           </div>
 
           <div class="col-12 col-sm-7 ps-sm-0 content-area">
-            <h4 class="fs-2">Tropical Disco</h4>
-            <p>Pattern Radio favourite hosted by Chris Holt. This time with guest mix from Greg Belson with his unique brand of funk fuelled gospel sounds.</p>
-            <p>Starts Friday 19th 7pm UTC.</p>
+            <h4 class="fs-2">Techno Saturday</h4>
+            <p>6 hours plus of deep techno and electro sounds. Live audio/visual mix from Alex Bowen, DJ mix from Dave Rogers and a blistering live set recorded on NYE fron Dan Moore.</p>
+            <p>Starts Saturday 3rd 5pm UTC.</p>
           </div>
         </div>
       </div>
