homepage content for live stream

--- a/src/views/page/home.njk
+++ b/src/views/page/home.njk
@@ -75,8 +75,9 @@
 
           <div class="col-12 col-sm-7 ps-sm-0 content-area">
             <h4 class="fs-2">Techno Saturday</h4>
-            <p>6 hours plus of deep techno and electro sounds. Live audio/visual mix from Alex Bowen, DJ mix from Dave Rogers and a blistering live set recorded on NYE fron Dan Moore.</p>
-            <p>Starts Saturday 3rd 5pm UTC.</p>
+            <p>Saturday 3rd, 6 hours plus of deep techno and electronic sounds.</p>
+            <p>Live audio/visual mix from Alex Bowen starts 5pm UTC on our <strong><a data-action="click->navigation#navigate" class="nav-link" style="display:inline" href="/live">live page</a></strong>, it will NOT be on our regular stream.<p>
+            <p>Then on our regular stream, a DJ mix from Dave Rogers and following at 9pm a blistering live set recorded on NYE fron Dan Moore.</p>
           </div>
         </div>
       </div>
