home page content

--- a/src/views/page/home.njk
+++ b/src/views/page/home.njk
@@ -70,14 +70,13 @@
         <div class="row g-0 p-0">
           <h3>Coming Soon</h3>
           <div class="col-12 col-sm-5 content-area pb-2">
-            <img src="images/shows/circuit-board.jpeg" class="w-100" alt="Techno Saturday on Pattern Radio"/>
+            <img src="images/shows/time-to-get-down/brand_200.png" class="w-100" alt="Time To Get DOwn on Pattern Radio"/>
           </div>
 
           <div class="col-12 col-sm-7 ps-sm-0 content-area">
-            <h4 class="fs-2">Techno Saturday</h4>
-            <p>Saturday 3rd, 6 hours plus of deep techno and electronic sounds.</p>
-            <p>Live audio/visual mix from Alex Bowen starts 5pm UTC on our <strong><a data-action="click->navigation#navigate" class="nav-link" style="display:inline" href="/live">live page</a></strong>, it will NOT be on our regular stream.<p>
-            <p>Then on our regular stream, a DJ mix from Dave Rogers and following at 9pm a blistering live set recorded on NYE fron Dan Moore.</p>
+            <h4 class="fs-2">Time To Get Down</h4>
+            <p>Twitch live stream Friday 16th 5pm</p>
+            <p>Live audio/visual show from Alex Bowen starts 5pm UTC on our <strong><a data-action="click->navigation#navigate" class="nav-link" style="display:inline" href="/live">live page</a></strong>, it will NOT be on our regular stream.<p>
           </div>
         </div>
       </div>
