--- a/src/views/partial/episode/_detail.njk
+++ b/src/views/partial/episode/_detail.njk
@@ -41,7 +41,7 @@
       <ul class="tags ps-0" data-action="click->episodes#tagsearch">
         {% for tag in data.episode.tags %}
           <li>
-            <button class="me-2 badge">{{ tag.name }}</button>
+            <span class="me-1 badge">{{ tag.name }}</span>
           </li>
         {% endfor %}
       </ul>
