--- a/src/views/partial/episode/_carousel.njk
+++ b/src/views/partial/episode/_carousel.njk
@@ -44,7 +44,7 @@
       <ul class="tags ps-0" data-action="click->episodes#tagSearch">
         {% for tag in item.tags %}
           <li>
-            <button class="me-2 badge">{{ tag.name }}</button>
+            <span class="me-1 badge">{{ tag.name }}</span>
           </li>
         {% endfor %}
       </ul>
