fix filter button target bug

--- a/src/css/bootstrap.scss
+++ b/src/css/bootstrap.scss
@@ -3,6 +3,8 @@ $headings-font-family: $brand-font-primary;
 $font-size-base: 1rem;
 $lead-font-size: $font-size-base * 3;
 $badge-color: $brand-color-dark;
+$badge-border-radius: 4px;
+$badge-font-weight: normal;
 $card-bg: transparent;
 $card-border-color: none;
 $card-border-radius: 0;
