add seperate section for external shows

--- a/src/views/page/browse.njk
+++ b/src/views/page/browse.njk
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-  <div id="episodes" class="list" data-action="episodes:paginate->pagination#update episodes:heading->heading#update pagination:paginate->episodes#paginate" data-controller="episodes heading pagination search" data-episodes-items-value="12" data-episodes-search-value="true" data-episodes-filters-value="true">
+  <div id="episodes" class="list" data-action="episodes:paginate->pagination#update episodes:heading->heading#update pagination:paginate->episodes#paginate" data-controller="episodes heading pagination search" data-episodes-title-value="Browse All Shows" data-episodes-items-value="12" data-episodes-search-value="true" data-filtered="true">
     <div class="container-fluid gx-4 gx-sm-5">
 
       <div class="row header">
