--- a/src/views/partial/list/_layout.njk
+++ b/src/views/partial/list/_layout.njk
@@ -1,6 +1,6 @@
 {% block count %}{% endblock %}
 
-{% for item in data.list.items | reverse %}
+{% for item in data.list.items %}
 {% block content %}{% endblock %}
 {% endfor %}
 
