--- a/src/views/layout.njk
+++ b/src/views/layout.njk
@@ -1,4 +1,4 @@
-<header class="main-header" data-controller="header filters" data-action="scroll@window->header#scroll" id="filters" data-filters-selected-template-id="selected" data-filters-tag-item-template-id="tag" data-filters-target-value="episodes">
+<header class="main-header" data-controller="header filters" data-action="scroll@window->header#scroll" id="filters" data-filters-selected-template-id="selected" data-filters-tag-item-template-id="tag">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark py-3">
     <div class="container-fluid">
       <a class="navbar-brand" href="/">
