new homepage content

--- a/src/views/page/home.njk
+++ b/src/views/page/home.njk
@@ -70,13 +70,15 @@
         <div class="row g-0 p-0">
           <h3>Coming Soon</h3>
           <div class="col-12 col-sm-5 content-area pb-2">
-            <img src="images/shows/time-to-get-down/brand_200.png" class="w-100" alt="Time To Get DOwn on Pattern Radio"/>
+            <img src="images/shows/tropicaldisco.png" class="w-100" alt="Tropical Disco on Pattern Radio"/>
           </div>
 
           <div class="col-12 col-sm-7 ps-sm-0 content-area">
-            <h4 class="fs-2">Time To Get Down</h4>
-            <p>Twitch live stream Friday 16th 5pm</p>
-            <p>Live audio/visual show from Alex Bowen starts 5pm UTC on our <strong><a data-action="click->navigation#navigate" class="nav-link" style="display:inline" href="/live">live page</a></strong>, it will NOT be on our regular stream.<p>
+            <h4 class="fs-2">Tropical Disco</h4>
+            <p>Friday 16th February 7pm</p>
+            <p>2 hours of sunshine sounds hosted by Chris Holt.<p>
+            <p>Saturday 17th February</p>
+            <p>New shows from Sem Titulo, Rhythm Retreat, Guest DJ mixes and Pattern Radio live.<p>
           </div>
         </div>
       </div>
