new homepage content

--- a/src/views/page/home.njk
+++ b/src/views/page/home.njk
@@ -66,6 +66,15 @@
         </div>
       </div>
 
+      <div class="col-12 col-md-6 col-xl-4">
+        <h3>Recommended listening</h3>
+        <div class="episodes pb-2 content-area" id="latest" data-controller="episodes" data-episodes-template-value="carousel" data-episodes-title-value="listen to latest shows" data-episodes-items-value="2" data-filtered="true">
+          <div class="carousel slide" id="carouselexampleautoplaying" data-bs-ride="carousel">
+            <div class="episodes carousel-inner" data-episodes-target="items"></div>
+          </div>
+        </div>
+      </div>
+
       <div class="col-12 col-md-6 col-xl-4 pb-4">
         <div class="row g-0 p-0">
           <h3>Coming Soon</h3>
@@ -75,19 +84,10 @@
 
           <div class="col-12 col-sm-7 ps-sm-0 content-area">
             <h4 class="fs-2">Tropical Disco</h4>
-            <p>Friday 16th February 7pm</p>
-            <p>2 hours of sunshine sounds hosted by Chris Holt.<p>
-            <p>Saturday 17th February</p>
+            <p class="mb-1">Friday 16th February</p>
+            <p>Tune in at 7pm for 2 hours of sunshine sounds hosted by Chris Holt.<p>
+            <p class="mb-1">Saturday 17th February</p>
             <p>New shows from Sem Titulo, Rhythm Retreat, Guest DJ mixes and Pattern Radio live.<p>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-12 col-md-6 col-xl-4">
-        <h3>Recommended listening</h3>
-        <div class="episodes pb-2 content-area" id="latest" data-controller="episodes" data-episodes-template-value="carousel" data-episodes-title-value="listen to latest shows" data-episodes-items-value="2" data-episodes-show-tags-value="true">
-          <div class="carousel slide" id="carouselexampleautoplaying" data-bs-ride="carousel">
-            <div class="episodes carousel-inner" data-episodes-target="items"></div>
           </div>
         </div>
       </div>
