new homepage content

--- a/src/views/page/home.njk
+++ b/src/views/page/home.njk
@@ -3,7 +3,7 @@
 {% block content %}
 
   <div class="container-fluid">
-    <div class="row row--orange pb-3 pb-md-0">
+    <div class="row row--orange mb-3 mb-md-0">
       <div class="col-12 col-xl-4 pb-4">
         <div class="flex-fill">
           <h1>Musical selections and discovery curated for enlightened listening</h1>
@@ -66,7 +66,7 @@
         </div>
       </div>
 
-      <div class="col-12 col-md-6 col-xl-4">
+      <div class="col-12 col-md-6 col-xl-4 pb-4">
         <h3>Recommended listening</h3>
         <div class="episodes pb-2 content-area" id="latest" data-controller="episodes" data-episodes-template-value="carousel" data-episodes-title-value="listen to latest shows" data-episodes-items-value="2" data-filtered="true">
           <div class="carousel slide" id="carouselexampleautoplaying" data-bs-ride="carousel">
