temp stream next

--- a/src/css/social-toolbar.scss
+++ b/src/css/social-toolbar.scss
@@ -11,7 +11,7 @@
       }
 
       a {
-        color: $brand-color-dark;
+        color: $brand-color-light;
 
         &:hover {
           color: $brand-color-primary;
