--- a/src/views/partial/episode/_carousel.njk
+++ b/src/views/partial/episode/_carousel.njk
@@ -19,7 +19,7 @@
       </div>
     </div>
 
-    <div class="col-12 col-sm-7 ps-2">
+    <div class="col-12 col-sm-7 ps-2 pe-5">
       
       {% set title = showData(item.name).title %}
       {% if item.user.username === 'patternradio' %}
