aw tribute on home page

--- a/src/views/page/home.njk
+++ b/src/views/page/home.njk
@@ -51,13 +51,14 @@
         <div class="row g-0 p-0">
           <h3>Coming Soon</h3>
           <div class="col-12 col-sm-4 content-area pb-2">
-            <img src="images/shows/skullmonday.jpg" class="w-100" alt="Skull Monday on Pattern Radio"/>
+            <img src="images/shows/special/andrew-weatherall-special.png" class="w-100" alt="Andrew Weatherall Tribute"/>
           </div>
 
           <div class="col-12 col-sm-8 ps-sm-0 content-area">
-            <h4 class="fs-2">Return of Skull Monday</h4>
-            <p class="mb-1">Sunday 25th February</p>
-            <p>Skull Monday is back this weekend as Heyyo B and Opo-wan return from their winter travels.<p>
+            <h4 class="fs-2">Andrew Weatherall Tribute</h4>
+            <p class="mb-1">Friday 29th March</p>
+            <p>Pattern Radio tribute to The Guvnor including a very special exclusive broadcast celebrating 20 years since a very special night.<p>
+              <a data-action="click->navigation#navigate" class="nav-link" href="/andrew-weatherall-tribute">See here for details</a>
           </div>
         </div>
       </div>
