--- a/src/views/page/special.njk
+++ b/src/views/page/special.njk
@@ -13,10 +13,10 @@
             </div>
             <div class="flex-grow-1 my-3 my-md-0">
               <p class="mb-2">A very special exclusive broadcast celebrating 20 years since a very special night.</p>
-              <p class="m-0"><strong>5pm Alex Bowen - Andrew Weatherall tribute mix</strong></p>
-              <p class="m-0"><strong>7pm Dan Moore - Live @ Superconductor 26/3/04</strong></p>
+              <p class="m-0"><strong>6pm Alex Bowen - Andrew Weatherall tribute mix</strong></p>
+              <p class="m-0"><strong>8pm Dan Moore - Live @ Superconductor 26/3/04</strong></p>
               <p class="m-0"><strong>9pm Andrew Weatherall - Live @ Superconductor 26/3/04</strong></p>
-              <p class="mt-2 p-0 fs-6">This will be a one off broadcast from that night and will not be streamed again on Pattern Radio.</p>
+              <p class="mt-2 p-0 fs-6">This will be a one off broadcast of the music from that night and will not be streamed again on Pattern Radio.</p>
             </div>
           </div>
         </div>
@@ -41,7 +41,7 @@
     </div>
 
     <div class="row">
-      <p><em>We had Andy’s 100% permission to record his set and make it available afterwards for playback on our website. It is being made available all these years later only out of complete respect to Andy and the fact he wanted people to enjoy listening back to it.</em></p>
+      <p><em>Andy played regularly at Superconductor and for some of those nights he gave us permission to record his set. This recording has been sat in the archives ever since and it is being made available all these years later only out of complete respect to Andy. Pattern Radio is a non profit organisation and exists solely for the love of and sharing quality music. Bringing you this special broadcast fits with those values.</em></p>
       <p><em>Remember it is a 20 year old live recording and hence we have re-mastered it a little to make it as good as possible for broadcast. But at the same time have been very mindful to leave it true to the original sound.</em></p>
     </div>
   </div>
