--- a/src/views/page/home.njk
+++ b/src/views/page/home.njk
@@ -21,7 +21,9 @@
             <div class="row pt-0">
               <div>
                 <h4 class="mb-1">Streaming Next</h4>
-                <p data-status-target="track" class="mb-2">7pm Roots & Culture Reggae Show</p>
+                <p data-status-target="track" class="mb-2">6pm Darren Harrison</p>
+                <p data-status-target="track" class="mb-2">8pm Lando</p>
+                <p data-status-target="track" class="mb-2">9pm Alex Bowen</p>
               </div>
             </div>
           </div>
